--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(lab6 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(lab6 main.c MyLibrary.h inputStr.c MyPrint.c modernization.c MyFree.c)
+add_executable(lab6 main.c MyLibrary.h inputStr.c MyPrint.c modernization.c MyFree.c DelSpace.c)
